--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -2,8 +2,9 @@ html {
   box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+* {
+  &::before,
+  &::after {
+    box-sizing: inherit;
+  }
 }
